--- a/simple-js-app-main/index.html
+++ b/simple-js-app-main/index.html
@@ -12,8 +12,8 @@
 
     <body>
         <!-- Navbar -->
-        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Pokedex</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand sr-only sr-only-focusable" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,7 +33,7 @@
                 </li>
               </ul>
             </div>
-          </nav> -->
+          </nav>
 
         <!-- Header -->
             <h1>Pokedex</h1>
@@ -45,12 +45,6 @@
 
 
         <!-- Modal Content -->
-        <!-- <div id="modal-container">
-            
-        </div> -->
-
-
-
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
