--- a/simple-js-app-main/index.html
+++ b/simple-js-app-main/index.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-        <title>Simple JS App</title>
+        <title>Pokeapp</title>
     </head>
 
 
@@ -37,8 +36,10 @@
 
         <!-- Header -->
             <h1>Pokedex</h1>
-            <ul class="pokemon-list list-group"></ul>
-
+            <ul class="list-group container"></ul>
+              <div class="pokemon-list row">
+             
+              </div>
         <div id="pokemon">
         
         </div>
