--- a/simple-js-app-main/index.html
+++ b/simple-js-app-main/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="/img/poke-favicon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-        <title>Pokeapp</title>
+        <title>Pokedex</title>
     </head>
 
 
@@ -46,7 +47,7 @@
           </div>
 
           <footer>
-            <img src="img/pokeball.png" class="poke-img" style="width:5rem; height:5rem">
+            <img src="img/pokeball.png" class="poke-img" style="width:3rem; height:3rem">
             <p class="credit">Project by Kayla Chan</p>
           </footer>
         
